Fix on body and html overflow-x Removed style due to issues in older Safari, unneccesary

--- a/_scss/_project-list.scss
+++ b/_scss/_project-list.scss
@@ -36,6 +36,10 @@ $container-width: $item-diameter * $pseudo-columns + ( $margin * $pseudo-columns
     $shift-y: $item-diameter * 1;
     @include transform(translate3d($shift-x, $shift-y, 0));
   }
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 .project-list_title {
   position: absolute;
