--- a/css/main.css
+++ b/css/main.css
@@ -291,6 +291,9 @@ h1 {
     -ms-transform: translate3d(-875px, 300px, 0);
     -o-transform: translate3d(-875px, 300px, 0);
     transform: translate3d(-875px, 300px, 0); }
+  .project-list_item img {
+    width: 100%;
+    height: 100%; }
 
 .project-list_title {
   position: absolute;
